--- a/src/app/layouts/main-layout/main-layout.html
+++ b/src/app/layouts/main-layout/main-layout.html
@@ -1,44 +1,50 @@
-<div class="container-fluid hospital-dashboard">
-  <div class="row min-vh-100">
-    <!-- Sidebar -->
-    <div class="col-lg-3 bg-sidebar text-white py-4">
-      <h4 class="text-center mb-4">🏥 Hospital Dashboard</h4>
+<!-- Top Navbar -->
+<nav class="navbar bg-secondary text-white px-3">
+  <i class="fas fa-bars" style="cursor:pointer; font-size:28px;" (click)="toggleSidebar()"></i>
+  <span class="ms-3 fw-bold">🏥 Hospital Dashboard</span>
+</nav>
 
-      <!-- Search box -->
-      <input
-  type="search"
-  placeholder="Search..."
-  class="form-control mb-3"
-  [(ngModel)]="searchText"
-  (keyup.enter)="applySearch()"
-/>
+<div class="d-flex">
 
-      <ul class="nav flex-column">
-        <li *ngFor="let item of filteredSidebar" class="nav-item mb-2">
-          <ng-container *ngIf="!item.children">
-            <a class="nav-link text-white" [routerLink]="item.link" routerLinkActive="active">{{ item.name }}</a>
-          </ng-container>
+  <!-- Sidebar -->
+  <div class="bg-sidebar text-white p-3" [hidden]="!sidebarToggle">
+    <input
+      type="search"
+      placeholder="Search..."
+      class="form-control mb-3"
+      [(ngModel)]="searchText"
+      (input)="applySearch()"
+      (keyup.enter)="applySearch()"
+    />
 
-          <ng-container *ngIf="item.children">
-            <a class="nav-link text-white" href="#" (click)="toggleCollapse(item.name); $event.preventDefault()">
-              {{ item.name }}
-            </a>
-            <div class="collapse" [id]="item.name">
-              <ul class="nav flex-column ms-3">
-                <li *ngFor="let child of item.children" class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="child.link" routerLinkActive="active">{{ child.name }}</a>
-                </li>
-              </ul>
-            </div>
-          </ng-container>
-        </li>
-      </ul>
-    </div>
+    <ul class="nav flex-column">
+      <li *ngFor="let item of filteredSidebar" class="nav-item mb-2">
 
-    <!-- Main Content -->
-    <div class="col-lg-9 p-4 bg-light">
-      <app-dashboard *ngIf="showDashboard"></app-dashboard>
-      <router-outlet *ngIf="!showDashboard"></router-outlet>
-    </div>
+        <ng-container *ngIf="!item.children">
+          <a class="nav-link text-white" [routerLink]="item.link" routerLinkActive="active-link">{{ item.name }}</a>
+        </ng-container>
+
+        <ng-container *ngIf="item.children">
+          <a class="nav-link text-white" href="#" (click)="toggleCollapse(item.name); $event.preventDefault()">
+            {{ item.name }}
+          </a>
+          <div class="collapse" [class.show]="item.open">
+            <ul class="nav flex-column ms-3">
+              <li *ngFor="let child of item.children">
+                <a class="nav-link text-white" [routerLink]="child.link" routerLinkActive="active-link">{{ child.name }}</a>
+              </li>
+            </ul>
+          </div>
+        </ng-container>
+
+      </li>
+    </ul>
   </div>
+
+  <!-- Main Content -->
+  <div class="p-4 flex-grow-1 bg-light">
+    <app-dashboard *ngIf="showDashboard"></app-dashboard>
+    <router-outlet *ngIf="!showDashboard"></router-outlet>
+  </div>
+
 </div>
