--- a/src/styles.css
+++ b/src/styles.css
@@ -70,3 +70,7 @@
   font-weight: 700;
   margin-top: 10px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
