--- a/src/styles.css
+++ b/src/styles.css
@@ -96,14 +96,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   display: flex;
   justify-content: center;
   align-items: center;
+  width: auto;
   height: 100vh;
-  background: #f0f4f7;
+  background-image: url(../public/images/10529590.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .auth-card {
   width: 400px;
   padding: 2rem;
-  background: white;
+  color: #a1acbd;
+   background: linear-gradient(135deg, #276c34 25%, #ced4da 25%, #052749 50%, #142112 70%, #210556 75%, #204162 75%, #031426);
   border-radius: 10px;
   box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
 }
