--- a/src/styles.css
+++ b/src/styles.css
@@ -105,32 +105,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .auth-card {
-  width: 400px;
-  padding: 2rem;
-  color: #a1acbd;
-   background: linear-gradient(135deg, #276c34 25%, #ced4da 25%, #052749 50%, #142112 70%, #210556 75%, #204162 75%, #031426);
-  border-radius: 10px;
-  box-shadow: 0px 4px 15px rgba(0,0,0,0.1);
+    width: 400px;
+    padding: 2rem;
+    color: #fff;
+    background: linear-gradient(135deg, rgb(139, 167, 146) 15%, rgb(227, 232, 232) 50%, rgb(142, 78, 149) 20%, rgb(20, 33, 18) 70%, rgb(11 218 53 / 96%) 75%, rgb(32, 65, 98) 75%, rgb(2, 24, 27));
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 15px;
 }
 
-.toggle-buttons {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 1rem;
-}
 
-.toggle-buttons button {
-  width: 50%;
-  padding: 0.5rem;
-  border: none;
-  cursor: pointer;
-  background: #e0e0e0;
-  font-weight: bold;
-  border-radius: 5px 5px 0 0;
-}
 
-.toggle-buttons button.active {
-  background: #007bff;
-  color: white;
-}
 
