new _code_css_add

--- a/src/app/modules/auth/login/login.html
+++ b/src/app/modules/auth/login/login.html
@@ -57,7 +57,7 @@
 
     <!-- Toggle Button -->
     <div class="text-center mt-3">
-      <button class="btn btn-link text-decoration-none text-primary" (click)="toggleMode()">
+      <button class="btn btn-link text-decoration-none text-white" (click)="toggleMode()">
         {{ isLoginMode ? 'New here? Signup' : 'Already have an account? Login' }}
       </button>
     </div>
