Pankaj_style _login_and_images_6Sep25

--- a/src/app/modules/auth/login/login.html
+++ b/src/app/modules/auth/login/login.html
@@ -2,8 +2,8 @@
   <div class="card shadow-lg p-4 rounded-4 position-relative auth-card">
 
     <!-- Hospital Logo -->
-    <div class="text-center mb-4">
-      <img [src]="logoPath" alt="logo" style="height:40px;">
+    <div class="text-center">
+      <img [src]="logoPath" alt="logo" style="height:90px;">
     </div>
 
     <h2 class="text-center mb-4 fw-bold">{{ isLoginMode ? 'Login' : 'Signup' }}</h2>
