--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@
 }
 
 .bg-sidebar {
-    background: linear-gradient(119deg, #1ebea8, #374a37, #dee2e6) !important;
+    background: linear-gradient(119deg, #6bc6b9, #0a8ca8, #dee2e6) !important;
     transition: background 0.3s ease;
 }
 
