--- a/src/app/modules/dashboard/dashboard.html
+++ b/src/app/modules/dashboard/dashboard.html
@@ -1,14 +1,32 @@
 <div class="row mb-4">
-  <!-- Dashboard Chart -->
-  <div class="col-md-6 mb-3">
+ 
+<div class="col-md-6 mb-3">
     <div class="card shadow border-0">
-      <div class="card-body">
-        <h5 class="card-title">Hospital Overview</h5>
-        <div class="chart-placeholder"></div>
-      </div>
-    </div>
+  <div class="card-body">
+    <h5 class="card-title">Today's Appointments</h5>
+    <table class="table table-hover table-bordered">
+      <thead class="table-light">
+        <tr>
+          <th>Patient</th>
+          <th>Doctor</th>
+          <th>Time</th>
+          <th>Date</th>
+          <th>Day</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let app of todaysAppointments">
+          <td>{{ app.patient }}</td>
+          <td>{{ app.doctor }}</td>
+          <td>{{ app.time }}</td>
+          <td>{{ app.date }}</td>
+          <td>{{ app.day }}</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-
+</div>
+</div>
   <!-- Bed Availability -->
   <div class="col-md-6 mb-3">
     <div class="card shadow border-0">
@@ -55,28 +73,13 @@
 </div>
 
 <!-- Appointments Table -->
-<div class="card shadow border-0">
-  <div class="card-body">
-    <h5 class="card-title">Today's Appointments</h5>
-    <table class="table table-hover table-bordered">
-      <thead class="table-light">
-        <tr>
-          <th>Patient</th>
-          <th>Doctor</th>
-          <th>Time</th>
-          <th>Date</th>
-          <th>Day</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let app of todaysAppointments">
-          <td>{{ app.patient }}</td>
-          <td>{{ app.doctor }}</td>
-          <td>{{ app.time }}</td>
-          <td>{{ app.date }}</td>
-          <td>{{ app.day }}</td>
-        </tr>
-      </tbody>
-    </table>
+
+ <!-- Dashboard Chart -->
+  <div class="card shadow border-0">
+    <div class="card shadow border-0">
+      <div class="card-body">
+        <h5 class="card-title">Hospital Overview</h5>
+        <app-bed-status-chart></app-bed-status-chart>
+      </div>
+    </div>
   </div>
-</div>
