--- a/src/app/modules/patients/patient-list/patient-list.html
+++ b/src/app/modules/patients/patient-list/patient-list.html
@@ -1,1 +1,48 @@
-<p>patient-list works!</p>
+<div class="container mt-4">
+  <div class="mb-3 border-bottom pb-2">
+    <h4 class="fw-bold">Patient<span class="text-danger">_</span>List</h4>
+  </div>
+  <!-- Loading indicator -->
+  <div *ngIf="loading">Loading patients...</div>
+
+  <!-- Table -->
+  <table
+    *ngIf="!loading && patients.length > 0"
+    class="table table-responsive bg-light shadow mt-2"
+  >
+    <thead class="table-secondary text-white">
+      <tr>
+        <th>ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Gender</th>
+        <th>DOB</th>
+        <th>Age</th>
+        <th>Contact</th>
+        <th>Email</th>
+        <th>Address</th>
+        <th>Blood Group</th>
+        <th>Medical History</th>
+        <th>Emergency Contact</th>
+      </tr>
+    </thead>
+    <tbody class="text-light">
+      <tr *ngFor="let p of patients">
+        <td>{{ p.patientId }}</td>
+        <td>{{ p.firstName }}</td>
+        <td>{{ p.lastName }}</td>
+        <td>{{ p.gender }}</td>
+        <td>{{ p.dateOfBirth | date: 'yyyy-MM-dd' }}</td>
+        <td>{{ p.age }}</td>
+        <td>{{ p.contactNumber }}</td>
+        <td>{{ p.email }}</td>
+        <td>{{ p.address }}</td>
+        <td>{{ p.bloodGroup }}</td>
+        <td>{{ p.medicalHistory }}</td>
+        <td>{{ p.emergencyContact }}</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div *ngIf="!loading && patients.length === 0">No patients found.</div>
+</div>
